Breaking changes here, mutt is working, tmux is not
colorschemes are messed up in vim/tmux/terminal
mouse doesn't work in tmux
msmtp needs to configure

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ these are my config files and a script to get them linked.
 
 # TODO 
 gpg setup
+taskwarrior keys and stuff
+sending mail msmtp
+tmux mouse config is not working
